--- a/CodePulse.API/appsettings.json
+++ b/CodePulse.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodePulseConnectionString": "Data Source=Srv-appdb;Database=CodePulseDb;Integrated Security=true; TrustServerCertificate=True;MultipleActiveResultSets=true ; Trusted_Connection=True"
+  }
 }
